--- a/RASD/Files/introduction.tex
+++ b/RASD/Files/introduction.tex
@@ -17,7 +17,7 @@ CodeKataBattle aims to fill these gaps by facilitating competitive programming c
      \item \textbf{ Allow educators to create programming challenges}\\Educators (and only them) are allowed to create tournaments, which are composed by a non predefined number of programming challenges called Code Kata Battles. Whenever a new tournament is created, all the students of the platform are notified and can partecipate to it. After the creation of a tournament, the educator can add collaborators that will help him in the management of the tournament. Both the creator of the tournament and the collaborators that are invited to it can create challenges within the context of a tournament.
      \item \textbf{ Allow the system to automatically evaluate students' submissions}\\Students submissions are automatically analyzed and ranked by the system, combining functional aspects, timeliness and quality level of sources. Functional aspects are measured in terms of number of unit test cases passed out of all test cases. Timeliness instead is measured in terms of elapsed time passed since the start of the battle. Finally, quality level of sources is measured in terms of code quality, whose aspects can be selected by the educator at battle creation time, and is computed by integrating with static analysis tools.
      \item \textbf{ Allow educators to manually evaluate students' submissions}\\Educators will have the possibility to enable manual evaluation of students' submissions for a battle. If the option is enabled, the educator who created the battle, at the end of the submission phase of a battle, can review the code of all the teams and assign a score. In this case, the system will combine the automatically computed score with the manual one to produce the final battle rank.
-     \item \textbf{ Allow students to track their performance}\\Teams will we able to see their current rank evolving during the battle, updated for each new submission. Additionally, at the end of each battle, the platform updates a personal tournament score of each student, that is the sum of all battle scores received in that tournament. This score is used to compute the ranking of students partecipating to the tournament. In this way, the student can track his performance during the tournament as well.
+     \item \textbf{ Allow students to track their performance}\\Teams will be able to see their current rank evolving during the battle, updated for each new submission. Additionally, at the end of each battle, the platform updates a personal tournament score of each student, that is the sum of all battle scores received in that tournament. This score is used to compute the ranking of students partecipating to the tournament. In this way, the student can track his performance during the tournament as well.
  \end{enumerate}
 \newpage
  %--------------------------------------
@@ -43,7 +43,7 @@ Once the students start developing their solutions, the platform will also start
 Lastly, once the deadline for the submission of solutions expires (and after the manual evaluation has been performed in case it was expected), the system assigns to every team that participated in the battle an integer score between 0 and 100. This will concur both to the team's battle rank and to the personal score of each user in the context of the tournament the battle belongs to. At any point in time every user subscribed to CKB can see the list of ongoing tournaments and the rank of enrolled users.
 For a smoother experience, students will receive email notifications about the most important events, such as the availability of a new tournament and battle, or the publication of the final rank of a battle.
 \subsubsection{Phenomena}
-According to the paper "The World and the Machine" by M.Jackson and P.Zave, we can identify the application domains. The following table describes the world, shared and the machine phenomena, including the reference to which part controls the phenomena.
+According to the paper "The World and the Machine" by M.Jackson and P.Zave, in order to correctly describe the application domain, the phenomena involved in it must be identified and categorized. The following table describes the world, shared and the machine phenomena, including the reference to which part controls the phenomena.
 \begin{table}[H]
     \rowcolors{3}{blue!15}{white}
     \begin{tabular}{|p{9.5cm}|p{2cm}|p{1.5cm}|}
