--- a/RASD/Files/introduction.tex
+++ b/RASD/Files/introduction.tex
@@ -100,9 +100,12 @@ According to the paper "The World and the Machine" by M.Jackson and P.Zave, in o
     \item {\textbf{Code Kata Battle (or battle):} the atomic unit of a tournament. Usually students are asked to implement an algorithm or to develope a simple project that solves the task. Each battle belongs to a specific tournament: students submitting solutions for a battle will obtain a score that will be used to compute both the team's rank for the battle and the members' tournament rank}
     \item {\textbf{Code Kata:} description and software project necessary for the battle, including test cases and build automation scripts. These are uploaded by the educator at battle creation time}
     \item {\textbf{Tournament collaborator:} other educator that is added by the tournament creator to help him in the management of the tournament. He can create battles and evaluate their submissions}
-    \item {\textbf{GitHub collaborator:} person who is granted the access to a GitHub repository with write permission}
+    \item {\textbf{GitHub:} web-based hosting service for version control, mostly used for computer code. It offers both distributed version control and source code management functionalities}
+    \item {\textbf{GitHub repository:} a repository is a storage space where some project files are stored. It can be either public or private. In the context of the platform, each battle is associated with a GitHub repository that is created by the system and shared with the teams}
+    \item {\textbf{GitHub collaborator:} person who is granted access to a GitHub repository with write permission}
+    \item {\textbf{GitHub Actions:} GitHub feature that allows to automate tasks directly on GitHub, such as building and testing code, or deploying applications. In the context of the platform, GitHub Actions is used to automatically notify the system when a new submission is pushed to the repository of a team}
     \item {\textbf{Test cases:} each battle is associated with a set of test cases, which  are input-output value pairs that describe the correct behavior of the ideal solution}
-    \item {\textbf{Static analysis:} is the analysis of programs performed without executing them, usually achieved by applying formal methods directly to the source code. In the context of the platform this kind of analysis is used to extract additional information about the level of security, reliability and maintainability of a battle submission}
+    \item {\textbf{Static analysis:} is the analysis of programs performed without executing them, usually achieved by applying formal methods directly to the source code. In the context of the platform this kind of analysis is used to extract additional information about the level of security, reliability and maintainability of a battle submission}
     \item {\textbf{Functional analysis:} measures the correctness of a solution in terms of passed test cases}
     \item {\textbf{Timeliness:} measures the time passed between the start of the battle and the last commit of the submission}
     \item {\textbf{Score:} to each solution is assigned a score which is computed taking into account timeliness, functional and static analysis and, eventually, manual score assigned by the educator that created the challenge. The score is a natural number between 0 and 100 (the higher the better)}
