--- a/RASD/Files/alloy.tex
+++ b/RASD/Files/alloy.tex
@@ -74,13 +74,7 @@ pred earlierEqual [t1, t2: Timestamp] {
 
 }
 
-sig TestCase {
-
-//input: String,
-
-//output: String
-
-}
+sig TestCase {}
 
 sig CodeKata {
 
@@ -264,7 +258,7 @@ fact creatorCanManage{
 all e: Educator, t:e.createsTournament  | e in t.isManaged 
 }
 
-// tournament's participants scores are the sum of battle scores obtained by the teams the student is a member of in the battles of the same tournament
+// tournament's participants scores are the sum of battle scores obtained by the teams the student is a member of in the battles of that tournament
 fun allStudentTeamsInEndedBattles[s:Student]:set Team{
 {t:Team | s in t.members and t.participates.state = Finished}
 }
@@ -441,42 +435,56 @@ pred world2{
 run world2  for 6
 \end{lstlisting}
 
-\subsection{Static analysis code}
+\subsection{Static analysis of the model}
 \begin{lstlisting}[language=alloy]
 //Check that all students enrolled in the tournament have 0 tournament score during subcription phase
 assert StudentTournamentScoreBeforeStart{
     all t : Tournament, s:Student | (#t.participants[s]=1 and t.state=Subscription) implies int t.participants[s].value = 0
 }
+check StudentTournamentScoreBeforeStart for 4
 
 //Check that all students enrolled to tournament without any finished battle have 0 tournament score
 assert StudentTournamentScoreNoFinishedBattles{
     all t : Tournament, s:Student|(#t.participants[s]=1 and t.state=Ongoing and (no b: t.battles, te:b.participants |  b.state = Finished and s in te.members)) implies int t.participants[s].value = 0
 }
+check StudentTournamentScoreNoFinishedBattles for 4
 
 //Check that all students enrolled to tournament with a tournament score greater than 0 have participated to at least 1 finished battle in that tournament
 assert StudentParticipatesWithTeam{
     all t : Tournament, s:Student| int t.participants[s].value > 0 implies ( some b:t.battles,te:t.battles.participants | b.state=Finished and s in te.members)
 }
-
+check StudentParticipatesWithTeam for 4
 
 
 //Check that all teams enrolled to the battle have 0 battle score before their first submission
 assert TeamScoreZeroBeforeSubmissions{
     all b : Battle, te:b.participants | (#te.submissions = 0) implies int te.battleScore.value = 0
 }
+check TeamScoreZeroBeforeSubmissions for 4
 
 //Check that all teams having battle score greater than 0 have at least 1 submission
 assert TeamNonZeroScore{
     all b : Battle, te:b.participants |  int te.battleScore.value > 0  implies  (#te.submissions > 0)
 }
+check TeamNonZeroScore for 4
 
 //Check that all teams's latest submission have been manually evaluated if a battle is ended
 assert AllTeamsManuallyEvaluated{
     no b : Battle |  b.manualEval = True and b.state=Finished and (some te:b.participants | #lastSubmission[te].manualScore = 0)
 }
-
-// Performing check
 check AllTeamsManuallyEvaluated for 4
+
 \end{lstlisting}
 
-TODO: eventually, add comments
+The alloy model previously presented focuses on the most important entities and attributes of the domain, which are strictly necessary to describe the main functionalities of the system. Indeed, some concepts such as time and scores have been simplified to be easily handled by the Alloy Analyzer and syntax.\\
+Images of two world examples are shown below, the first focuses on educators, tournaments and battles, while the second one includes also all the aspects related to students, teams and submissions.
+\begin{figure}[H]
+    \centering
+    \hspace{-4cm}\includegraphics[width=1.3\textwidth]{Alloy/world1.png}
+    \caption{World1}
+\end{figure}
+\begin{figure}[H]
+    \centering
+    \vspace{-3cm}\includegraphics[width=1.8\textwidth,angle=90,origin=c]{Alloy/world2.png}
+    \caption{World1}
+\end{figure}
