almost finished latex
-) tried to adjust world2 image
-) added effort table

--- a/RASD/Files/alloy.tex
+++ b/RASD/Files/alloy.tex
@@ -479,11 +479,15 @@ The alloy model previously presented focuses on the most important entities and 
 Images of two world examples are shown below, the first focuses on educators, tournaments and battles, while the second one includes also all the aspects related to students, teams and submissions.
 \begin{figure}[H]
     \centering
-    \hspace{-4cm}\includegraphics[width=1.3\textwidth]{Alloy/world1.png}
+    \vspace{-2cm}
+    \hspace{-2cm}
+    \includegraphics[width=1.45\textwidth]{Alloy/world1.png}
+    \vspace{0.2cm}
     \caption{World1}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \vspace{-3cm}\includegraphics[width=1.8\textwidth,angle=90,origin=c]{Alloy/world2.png}
-    \caption{World1}
+    \vspace{-4cm}
+    \includegraphics[width=1.65\textwidth,angle=90,origin=c]{Alloy/world2.png}
+    \caption{World2}
 \end{figure}
