--- a/RASD/Files/effort.tex
+++ b/RASD/Files/effort.tex
@@ -1,1 +1,9 @@
-Provide here information about how much effort each group member spent in working at this document. We would appreciate details here.
+\begin{tabular}{|c|c|c|c|c|}
+    \hline
+    \textbf{Name and Surname} & \textbf{Section 1} & \textbf{Section 2} & \textbf{Section 3} & \textbf{Section 4} \\
+    \hline
+    Tommaso Capaccioli & 10 & 10 & 10 & 10 \\
+    \hline
+    Gabriele Ginestroni & 10 & 10 & 10 & 10 \\
+    \hline
+\end{tabular}
