--- a/RASD/rasd.tex
+++ b/RASD/rasd.tex
@@ -22,7 +22,7 @@
 \usepackage{alloy}
 \usepackage{graphicx}
 
-% Some utilities\ldots
+% Some utilities
 \input{util/highlight}
 \input{util/abbrev}
 
@@ -37,8 +37,7 @@
     \centering
     {\scshape\large AY 2023/2024 \par}
     \vfill
-    \includegraphics[width=150pt]{Images/PolimiLogo.png}\par\vspace{1cm}
-    {\scshape\LARGE Politecnico di Milano \par}
+    \includegraphics[scale=0.7]{Images/PolimiLogo.png}\par\vspace{1cm}
     \vspace{1.5cm}
     {\huge\bfseries RASD\@: Requirement Analysis
         and Specification Document \par}
@@ -50,7 +49,7 @@
     \vfill
     {\large \textbf{Version 1}\\ \today \par}
 \end{titlepage}
-\hypersetup{%
+\hypersetup{
     pdfborder = {0 0 0}
 }
 \thispagestyle{plain}
@@ -101,13 +100,5 @@
 {{\section{Effort Spent}}}
 \label{sect:effort}
 \input{Files/effort}
-
-
-%------------------------------------------------------------------------------------------------------------------------------------------------
-\clearpage
-\addcontentsline{toc}{section}{References}
-\bibliographystyle{plain}
-\bibliography{main}
-%------------------------------------------------------------------------------------------------------------------------------------------------
 
 \end{document}
