--- a/RASD/Files/effort.tex
+++ b/RASD/Files/effort.tex
@@ -2,8 +2,8 @@
     \hline
     \textbf{Name and Surname} & \textbf{Section 1} & \textbf{Section 2} & \textbf{Section 3} & \textbf{Section 4} \\
     \hline
-    Tommaso Capaccioli & 10 & 10 & 10 & 10 \\
+    Tommaso Capacci & 11h & 18h & 20h & 13h \\
     \hline
-    Gabriele Ginestroni & 10 & 10 & 10 & 10 \\
+    Gabriele Ginestroni & 11h & 10h & 24h & 18h \\
     \hline
 \end{tabular}
