changed wrong file names

--- a/DD/Files/effort.tex
+++ b/DD/Files/effort.tex
@@ -2,7 +2,7 @@
     \hline
     \textbf{Name and Surname} & \textbf{Section 1} & \textbf{Section 2} & \textbf{Section 3} & \textbf{Section 4} \\
     \hline
-    Tommaso Capaccioli & 10 & 10 & 10 & 10 \\
+    Tommaso Capacci & 10 & 10 & 10 & 10 \\
     \hline
     Gabriele Ginestroni & 10 & 10 & 10 & 10 \\
     \hline
