upload description of component diagram

--- a/DD/dd.tex
+++ b/DD/dd.tex
@@ -68,6 +68,11 @@
 
 %------------------------------------------------------------------------------------------------------------------------------------------------
 \clearpage
+{{\section{Architectural Design}}}
+\label{sect:architectural}
+\input{Files/architectural.tex}
+%------------------------------------------------------------------------------------------------------------------------------------------------
+\clearpage
 {{\section{Effort Spent}}}
 \label{sect:effort}
 \input{Files/effort}
